--- a/style.css
+++ b/style.css
@@ -80,12 +80,26 @@ body {
     color: rgb(26, 2, 63);
 }
 
-.bar {
+.bar1,
+.bar2,
+.bar3 {
     width: 24px;
     height: 3px;
     margin: 0 0 5px 0;
     background: black;
     transition: all 0.5s ease-out;
+}
+
+.change .bar1 {
+    transform: translate(0, 8px) rotate(-45deg);
+}
+
+.change .bar2 {
+    opacity: 0;
+}
+
+.change .bar3 {
+    transform: translate(0, -8px) rotate(45deg);
 }
 
 .greet {
@@ -276,8 +290,6 @@ label {
     align-items: center;
     justify-content: center;
 }
-
-
 
 .links {
     display: flex;
